--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Battleline-ai : ">
+    <meta name="description" content="Battleline-AI : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Battleline-ai</title>
+    <title>Battleline-AI</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RomanYu/BattleLine-AI">View on GitHub</a>
 
-          <h1 id="project_title">Battleline-ai</h1>
+          <h1 id="project_title">Battleline-AI</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -35,6 +35,8 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
+<p><a href="https://github.com/RomanYu/BattleLine-AI/blob/master/Battle.jpg">Battle Line</a></p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -61,7 +63,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Battleline-ai maintained by <a href="https://github.com/RomanYu">RomanYu</a></p>
+        <p class="copyright">Battleline-AI maintained by <a href="https://github.com/RomanYu">RomanYu</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
