--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="what-is-battle-line" class="anchor" href="#what-is-battle-line" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is Battle Line?</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Battle Line is a card game of capture the flags using an ancient battle formation theme. It plays like rummy or poker is easy to learn and has strategy and the ability to provide surprises to your opponent. The leaders of both sides direct forces along the battle line to gain tactical advantages. The first player to win three adjacent Flags or any five Flags is the winner. Based on Reiner Knizia's original design published in Germany as Schotten-Totten Battle Line enhances and expands the game with more options and fun.</p>
 
 <p><img src="https://raw.githubusercontent.com/RomanYu/BattleLine-AI/master/Battle.jpg" alt="Battle Line"></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="rules" class="anchor" href="#rules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rules</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Rules in English version is <a href="https://github.com/RomanYu/BattleLine-AI/blob/master/BattleLineRules.pdf">here</a></p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
