Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,6 +43,59 @@
 
 <p>Rules in English version is <a href="https://github.com/RomanYu/BattleLine-AI/blob/master/BattleLineRules.pdf">here</a></p>
 
+<p><strong>中文版本：</strong></p>
+
+<p>游戏目标: 通过组合自己部队的阵型来占据地区。</p>
+
+<p>游戏人数：2</p>
+
+<p>游戏配件：60张部队牌(Troop cards)，6种颜色，每种颜色从1到10。</p>
+
+<p>10 = Elephants, 9 =Chariots, 8 = Heavy Cavalry, 7 = Light Cavalry, 6 =Hypaspists, 5 = Phalangists,4 = Hoplites, 3 = Javalineers, 2 =Peltasts, 1 = Skirmishers</p>
+
+<p>10张战术牌(Tactics cards)。</p>
+
+<p>9个塑料标记物，表示9个地区。</p>
+
+<p>游戏过程：</p>
+
+<ol>
+<li><p>部署：两位玩家面对面坐着，把九个地区标记放在玩家之间，排成一行，形成一条战线。把60张部队牌洗匀，双方各发7张。剩余部队牌构成牌堆，放在战线的一边，战术牌洗匀后牌面向下放在战线的另一边。随机决定一位玩家开始。</p></li>
+<li>
+<p>玩家的回合：双方轮流行动，每个玩家的回合，依次执行以下动作：</p>
+
+<p>1）出一张部队牌或者一张战术牌。部队牌牌面向上，放在位于自己的一侧的战线旁。战术牌必须立即使用，立即生效。</p>
+
+<p>2）声明占据一个或多个地区，也可以不声明。</p>
+
+<p>3）从部队牌堆或者战术牌堆中抓一张牌。如果牌堆用完，游戏仍然继续，但无法从该牌堆中抓牌。</p>
+
+<pre><code>部队牌要放在战线某个地区上，位于自己的一侧。一个地区最多只能放3张本方的部队牌。
+如果有玩家无法打出任何部队牌，他可以选择略过（不做任何动作，直接由对方行动）或者打一张战术牌（仍然可以占据地区、抓牌）。而对方仍然可以正常行动，直至游戏分出胜负。
+玩家无法打出部队牌，有2种情况：玩家手上没有部队牌，只有战术牌；玩家已经把战线上本方能放部队牌的位置全都放满了，无法再放牌。
+</code></pre>
+</li>
+<li>
+<p>阵型：在一个地区上的三张部队牌可以构成阵型，出牌的先后顺序对阵型没有影响。阵型的强度，从大到小依次为：</p>
+
+<p>1) 同花顺(Wedge)：同色，数字连续。如【红5】【红6】【红7】</p>
+
+<p>2) 炸弹（三条）(Phalanx)：数字相同的三张牌，颜色任意。如【红5】【蓝5】【绿5】</p>
+
+<p>3) 同花(Battalion Order)：同色，但数字不连续。如【蓝2】【蓝7】【蓝4】</p>
+
+<p>4) 顺子(Skirmish Line)：数字连续，颜色任意。如【黄4】【红6】【绿5】</p>
+
+<p>5) 其他(host)：不属于前四种的任意其他阵型。如【黄5】【蓝5】【绿3】</p>
+</li>
+</ol>
+
+<p>游戏结束：游戏结束的条件：一方连续占据了三个连续的地区或者一方占据了任意五个地区。一旦满足游戏结束的条件，游戏立即结束，不得再声明占据地区。游戏结束的条件未满足时，只要手中有部队牌，就必须打出。</p>
+
+<blockquote>
+<p>摘自 <a href="https://www.douban.com/group/topic/17103657/">豆瓣小组</a></p>
+</blockquote>
+
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
