--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
 
 <p>3）从部队牌堆或者战术牌堆中抓一张牌。如果牌堆用完，游戏仍然继续，但无法从该牌堆中抓牌。</p>
 
-<pre><code>部队牌要放在战线某个地区上，位于自己的一侧。一个地区最多只能放3张本方的部队牌。
+<p><em>部队牌要放在战线某个地区上，位于自己的一侧。一个地区最多只能放3张本方的部队牌。
 如果有玩家无法打出任何部队牌，他可以选择略过（不做任何动作，直接由对方行动）或者打一张战术牌（仍然可以占据地区、抓牌）。而对方仍然可以正常行动，直至游戏分出胜负。
-玩家无法打出部队牌，有2种情况：玩家手上没有部队牌，只有战术牌；玩家已经把战线上本方能放部队牌的位置全都放满了，无法再放牌。
-</code></pre>
+玩家无法打出部队牌，有2种情况：玩家手上没有部队牌，只有战术牌；玩家已经把战线上本方能放部队牌的位置全都放满了，无法再放牌。</em></p>
 </li>
 <li>
 <p>阵型：在一个地区上的三张部队牌可以构成阵型，出牌的先后顺序对阵型没有影响。阵型的强度，从大到小依次为：</p>
@@ -87,6 +86,25 @@
 <p>4) 顺子(Skirmish Line)：数字连续，颜色任意。如【黄4】【红6】【绿5】</p>
 
 <p>5) 其他(host)：不属于前四种的任意其他阵型。如【黄5】【蓝5】【绿3】</p>
+</li>
+<li>
+<p>声明占据地区：玩家可以声明占据一个或多个地区。要想声明占据某个地区，必须满足下面2个条件：</p>
+
+<p>1)该玩家在此地区已经部署了3个部队，即已经放置了3张部队牌。</p>
+
+<p>2) 该地区的对面，对方无论怎么添加部队牌，都不可能构成比自己当前已经部署的军队更强的阵型。</p>
+
+<p>*注意：声明占据的时候，只看桌面上牌面向上的牌，包括部队牌和战术牌，还有弃牌（使用战术牌有可能会造成弃牌），不考虑手牌和牌堆里的牌。即手中的牌，还有牌堆里的牌，不论是部队牌还是战术牌，都不能影响声明占据地区。</p>
+
+<p>比如：玩家甲在一个地区放置了【红3】【红4】【红5】，而玩家乙在对面放置了【红6】【绿6】，那么玩家甲就能声明该地区了，因为玩家乙最多摆成炸弹，也不如同花顺。</p>
+
+<p>再比如，玩家甲在一个地区放置了【红3】【红4】【红5】，而玩家乙在对面放置了【蓝8】，如果【蓝7】、【蓝10】都已经放在了其他的地区上，则玩家甲可以宣布占据，因为玩家乙无法摆成同花顺。</p>
+
+<p>上例中，如果【蓝7】、【蓝9】被玩家拿在手里，或者还在牌堆里，玩家甲就都不能声明占据。因为这种情况下，玩家乙可能摆成【蓝7】【蓝8】【蓝9】（仅从桌面上牌面向上的牌看，有这个可能性），打败玩家甲的【红3】【红4】【红5】。</p>
+
+<p>还有一种情况，本方已经在某个地区上放置了3张牌，而对方放了1张或2张，但无论对方怎么添加部队牌，最多只能和本方打平（阵型强度相同、数字总和也相 同），由于本方已经有3张牌构成阵型，后构成阵型的肯定为对方，因此对方必定输掉，所以本方可以声明占据该地区。</p>
+
+<p>玩家声明占据某个地区之后，该玩家可以把地区标记移到自己一侧，表示自己已经占据该地区，而该地区上双方放置的牌（不管是部队牌还是战术牌）都不得再动，之后该地区上不能再放置任何牌，任何战术牌也不能影响该地区。*</p>
 </li>
 </ol>
 
