--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
 <p>Battle Line is a card game of capture the flags using an ancient battle formation theme. It plays like rummy or poker is easy to learn and has strategy and the ability to provide surprises to your opponent. The leaders of both sides direct forces along the battle line to gain tactical advantages. The first player to win three adjacent Flags or any five Flags is the winner. Based on Reiner Knizia's original design published in Germany as Schotten-Totten Battle Line enhances and expands the game with more options and fun.</p>
 
-<p><img src="https://raw.githubusercontent.com/RomanYu/BattleLine-AI/master/Battle.jpg" alt="Battle Line"></p>
+<p><img src="https://raw.githubusercontent.com/RomanYu/BattleLine-AI/gh-pages/images/Battle.jpg" alt="Battle Line"></p>
 
 <h3>
 <a id="rules" class="anchor" href="#rules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rules</h3>
 
-<p>Rules in English version is <a href="https://github.com/RomanYu/BattleLine-AI/blob/master/BattleLineRules.pdf">here</a></p>
+<p>Rules in English version is <a href="https://github.com/RomanYu/BattleLine-AI/blob/gh-pages/images/BattleLineRules.pdf">here</a></p>
 
 <p><strong>中文版本：</strong></p>
 
@@ -115,6 +115,11 @@
 <blockquote>
 <p>摘自 <a href="https://www.douban.com/group/topic/17103657/">豆瓣小组</a></p>
 </blockquote>
+
+<h3>
+<a id="sample" class="anchor" href="#sample" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sample</h3>
+
+<p><img src="https://raw.githubusercontent.com/RomanYu/BattleLine-AI/gh-pages/images/sample.png" alt="sample"></p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
